--- a/NewApp/testapp1/src/App.css
+++ b/NewApp/testapp1/src/App.css
@@ -26,3 +26,10 @@ text-decoration: none;
 margin: 10px;
 font-size: 25px;
 }
+
+calendar {
+  color: rgb(221, 7, 7);
+  text-decoration: none;
+  margin: 10px;
+  font-size: 25px;
+}
