--- a/NewApp/testapp1/src/pages/Home.css
+++ b/NewApp/testapp1/src/pages/Home.css
@@ -1,8 +1,8 @@
 body {
-    background: gray;
+    background: black;
   }
 
   img {
-    max-width: 100%;
+    max-width: auto;
     max-height: 100%;
 }
