--- a/NewApp/testapp1/src/pages/About.css
+++ b/NewApp/testapp1/src/pages/About.css
@@ -1,14 +1,14 @@
 body, h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
+/*
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
-
+*/
 .team-section{
     text-align: "right";
     max-width: 800px;
