--- a/NewApp/testapp1/src/pages/Footer.css
+++ b/NewApp/testapp1/src/pages/Footer.css
@@ -11,7 +11,7 @@ body {
     position: bottom;
     background-color: #333333;
     width: 100%;
-    bottom: 0;
+    bottom: 0%;
     color: #333333;
     font-size: 25px;
     margin-top: 5%;
