--- a/NewApp/testapp1/src/App.css
+++ b/NewApp/testapp1/src/App.css
@@ -9,9 +9,12 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
+  position:sticky;
+  top: 0;
   margin: 0;
   width: 100%;
   height: 80px;
+  opacity: 0.8;
   background-color: black;
   display: flex;
   justify-content: center;
