--- a/NewApp/testapp1/src/pages/Home.css
+++ b/NewApp/testapp1/src/pages/Home.css
@@ -8,19 +8,12 @@
     position: relative;
   }*/
 
-body{
-    padding-bottom: 100;
-}
-
-img.home {
-    padding-top: 100;
+img.home {    
     margin: 0;
-    min-height: 100%;
-    min-width: 1024px;
     opacity:1;
     width: 100%;
     height: auto;
-    position:fixed;
+    position:relative;
     top: 0;
     left: 0;
     
