--- a/NewApp/testapp1/src/pages/Home.css
+++ b/NewApp/testapp1/src/pages/Home.css
@@ -1,12 +1,7 @@
 
-/*body {
-    background-color: #cccccc;
-    background-image: url("file:///C:/Users/claus/Documents/GitHub/SWE_Project1/NewApp/testapp1/src/pages/images/Home_Background.jpg"); 
-    background-position: top;
-    background-repeat:initial;
-    background-size: cover;
-    position: relative;
-  }*/
+body {
+    background-color: #cccccca4;
+  }
 
 img.homebg {    
     margin: 0;
