--- a/NewApp/testapp1/src/pages/Home.css
+++ b/NewApp/testapp1/src/pages/Home.css
@@ -1,8 +1,10 @@
 
-body {
+body{
     background-color: #cccccca4;
   }
-
+h1,h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
 img.homebg {    
     margin: 0;
     opacity:1;
